--- a/index.html
+++ b/index.html
@@ -8,11 +8,19 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="assets/favicon/site.webmanifest">
+    <link rel="stylesheet" href="assets/css/global.css">
+    <link rel="stylesheet" href="assets/css/header.css">
     <title>SlideJS</title>
 </head>
 
-<body>
-    
+<body class="body-white">
+    <header>
+        <div class="container container-header">
+            <img src="assets/images/slideJS-logo.png" alt="Logo do SlideJS">
+        </div>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 
 </html>
