--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="manifest" href="assets/favicon/site.webmanifest">
     <link rel="stylesheet" href="assets/css/global.css">
     <link rel="stylesheet" href="assets/css/header.css">
+    <link rel="stylesheet" href="assets/css/divider.css">
     <title>SlideJS</title>
 </head>
 
@@ -17,6 +18,9 @@
     <header>
         <div class="container container-header">
             <img src="assets/images/slideJS-logo.png" alt="Logo do SlideJS">
+        </div>
+        <div class="container">
+            <div class="divider rounded"></div>
         </div>
     </header>
     <main></main>
