--- a/index.html
+++ b/index.html
@@ -8,22 +8,45 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="assets/favicon/site.webmanifest">
-    <link rel="stylesheet" href="assets/css/global.css">
-    <link rel="stylesheet" href="assets/css/header.css">
-    <link rel="stylesheet" href="assets/css/divider.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <title>SlideJS</title>
 </head>
 
 <body class="body-white">
-    <header>
+    <header id="header">
         <div class="container container-header">
             <img src="assets/images/slideJS-logo.png" alt="Logo do SlideJS">
         </div>
-        <div class="container">
-            <div class="divider rounded"></div>
-        </div>
     </header>
-    <main></main>
+    <div class="container">
+        <div class="divider rounded"></div>
+    </div>
+    <main id="caroussel">
+        <div class="container container-caroussel flex">
+            <div class="container-slider flex">
+                <div class="slider flex">
+                    <div class="slider-roll flex">
+                            <img src="assets/images/batman-wallpaper.webp" alt="">
+                            <img src="assets/images/blackpanter-wallpaper.webp" alt="">
+                            <img src="assets/images/deadpool-wallpaper.webp" alt="">
+                            <img src="assets/images/wolverine-wallpaper.webp" alt="">
+                    </div>
+                    <div class="divider"></div>
+                </div>
+                <div class="pointer rounded">
+                    <ul class="flex">
+                        <li class="active"></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </main>
+    <div class="container">
+        <div class="divider rounded"></div>
+    </div>
     <footer></footer>
 </body>
 
