--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
     <div class="container">
         <div class="divider rounded"></div>
     </div>
-    <footer></footer>
+    <footer id="footer">
+        <div class="container container-footer flex">
+            <p>© 2025 - Desenvolvido por <a href="https://guioliveirx.vercel.app/" target="_blank" rel="norrefer noopenner">Guilherme</a></p>
+        </div>
+    </footer>
 </body>
 
 </html>
