feat: create toogle theme button

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
     <header id="header">
         <div class="container container-header">
             <img src="assets/images/slideJS-logo.png" alt="Logo do SlideJS">
+            <div class="toogle theme-white">
+                <img src="assets/Icons/moon-light.svg" alt="Icone clicável para ativar o modo escuro">
+            </div>
         </div>
+        
     </header>
     <div class="container">
         <div class="divider rounded"></div>
@@ -26,10 +30,10 @@
             <div class="container-slider flex">
                 <div class="slider flex">
                     <div class="slider-roll flex">
-                            <img src="assets/images/batman-wallpaper.webp" alt="">
-                            <img src="assets/images/blackpanter-wallpaper.webp" alt="">
-                            <img src="assets/images/deadpool-wallpaper.webp" alt="">
-                            <img src="assets/images/wolverine-wallpaper.webp" alt="">
+                            <img src="assets/images/batman-wallpaper.webp" alt="Imagem do Batman">
+                            <img src="assets/images/blackpanter-wallpaper.webp" alt="Imagem do Pantera Negra">
+                            <img src="assets/images/deadpool-wallpaper.webp" alt="Imagem do Deadpool">
+                            <img src="assets/images/wolverine-wallpaper.webp" alt="Imagem do Wolverine">
                     </div>
                     <div class="divider"></div>
                 </div>
