feat: create slider point function

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
                 <div class="container-slider flex">
                     <div class="slider flex">
                         <div class="slider-roll flex">
-                                <img src="assets/images/batman-wallpaper.webp" alt="Imagem do Batman">
                                 <img src="assets/images/blackpanter-wallpaper.webp" alt="Imagem do Pantera Negra">
                                 <img src="assets/images/deadpool-wallpaper.webp" alt="Imagem do Deadpool">
                                 <img src="assets/images/wolverine-wallpaper.webp" alt="Imagem do Wolverine">
@@ -38,11 +37,10 @@
                         <div class="divider"></div>
                     </div>
                     <div class="pointer rounded">
-                        <ul class="flex">
-                            <li class="active"></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                        <ul class="pointer-list flex">
+                            <li class="slide active"></li>
+                            <li class="slide "></li>
+                            <li class="slide "></li>
                         </ul>
                     </div>
                 </div>
