refactor: add more images to slider

--- a/index.html
+++ b/index.html
@@ -28,17 +28,23 @@
         <main id="caroussel">
             <div class="container container-caroussel flex">
                 <div class="container-slider flex">
-                    <div class="slider flex">
+                    <div class="slider rounded flex">
                         <div class="slider-roll flex">
                                 <img src="assets/images/blackpanter-wallpaper.webp" alt="Imagem do Pantera Negra">
                                 <img src="assets/images/deadpool-wallpaper.webp" alt="Imagem do Deadpool">
                                 <img src="assets/images/wolverine-wallpaper.webp" alt="Imagem do Wolverine">
+                                <img src="assets/images/capitamarvel-wallpaper.webp" alt="Imagem da Capitã Marvel">
+                                <img src="assets/images/deadpoolxwolverine-wallpaper.webp" alt="Imagem do Wolverine e Deadpool">
+                                <img src="assets/images/milesmorales-wallpaper.webp" alt="Imagem do Miles Morales">
                         </div>
                         <div class="divider"></div>
                     </div>
                     <div class="pointer rounded">
                         <ul class="pointer-list flex">
                             <li class="slide active"></li>
+                            <li class="slide "></li>
+                            <li class="slide "></li>
+                            <li class="slide "></li>
                             <li class="slide "></li>
                             <li class="slide "></li>
                         </ul>
